更新至栈、队列和数组

--- a/栈、队列和数组/三、栈、队列和数组.md
+++ b/栈、队列和数组/三、栈、队列和数组.md
@@ -447,3 +447,155 @@ bool DeQueue2(LinkQueue& Q, int& x)
 ![image.png](https://s2.loli.net/2023/05/06/wJzyPj7DNvfsBEb.png)
 
 ![image.png](https://s2.loli.net/2023/05/06/eCdSZAHFUpYhJPi.png)
+
+## 应用
+
+### 括号匹配
+
+用栈实现括号匹配：
+
+依次扫描所有字符，遇到左括号入栈，遇到右括号则弹出栈顶元素检查是否匹配。
+
+匹配失败情况：
+
+1. 左括号单身
+2. 右括号单身
+3. 左右括号不匹配
+
+![image.png](https://s2.loli.net/2023/05/07/95tDIHurTYMGZSl.png)
+
+```cpp
+//括号匹配
+bool bracketCheck(char* str, int length) {
+    SqStack S;
+    InitStack(S);//初始化一个栈
+    for (int i = 0; i < length; i++) {
+        if (str[i] == '(' || str[i] == '[' || str[i] == '{') {
+            Push(S, str[i]);//扫描到左括号，入栈
+        }
+        else {
+            if (StackEmpty(S))return false;//扫描到右括号且当前栈空，匹配失败
+            char topElem;
+            Pop(S, topElem);//栈顶元素出栈进行匹配
+            if (str[i] == ')' && topElem != '(')
+                return false;
+            if (str[i] == ']' && topElem != '[')
+                return false;
+            if (str[i] == '}' && topElem != '{')
+                return false;
+        }
+    }
+    return StackEmpty(S);//最后检查栈，若空匹配成功，非空匹配失败
+}
+```
+
+### 前中后缀表达式
+
+![image.png](https://s2.loli.net/2023/05/07/sTnhG83m9rKfeab.png)
+
+中缀转后缀（左优先）：
+
+当中缀表达式转后缀表达式时，由于运算顺序的不同，可能存在转换为几种不同后缀表达式的情况，此时我们采用左优先原则，保证手算和机算的结果相同。
+
+![image.png](https://s2.loli.net/2023/05/07/vGjdpPImhfUKnLF.png)
+
+中缀转后缀的机算方法：
+
+![image.png](https://s2.loli.net/2023/05/07/re967Xqy1TZntCQ.png)
+
+后缀表达式的手算方法：
+
+![image.png](https://s2.loli.net/2023/05/07/TsrGNq5oEf8hVvX.png)
+
+后缀表达式机算：利用栈 先弹出的元素为右操作数
+
+![image.png](https://s2.loli.net/2023/05/07/TnbMxI3GqEAsthz.png)
+
+中缀转前缀（右优先）：下图以右边的为准
+
+![image.png](https://s2.loli.net/2023/05/07/zMRZ5CsEvrmIfQJ.png)
+
+前缀表达式机算：利用栈 先弹出的元素是左操作数
+
+![image.png](https://s2.loli.net/2023/05/07/sFAk75JMWuYp4gQ.png)
+
+中缀表达式的计算（用栈实现）
+
+![image.png](https://s2.loli.net/2023/05/07/FnOSEDuyxgtXjcd.png)
+
+### 栈在递归中的运用
+
+适合用“递归”解决：可以把原始问题转换为属性相同，但规模较小的问题。
+
+![image.png](https://s2.loli.net/2023/05/07/yBx9LRUvpKAF2zu.png)
+
+### 队列的运用
+
+树的层次遍历
+
+图的广度优先遍历
+
+操作系统中FCFS先来先服务的策略
+
+## 数组
+
+### 数组的存储
+
+一维数组：
+
+![image.png](https://s2.loli.net/2023/05/07/MXpeLEDbClJIzmw.png)
+
+二维数组（分为按行存储以及按列存储）：
+
+![image.png](https://s2.loli.net/2023/05/07/O3taQWkS9hR2eyc.png)
+
+![image.png](https://s2.loli.net/2023/05/07/3zw1yeIf9MDOVJs.png)
+
+### 对称矩阵
+
+若n阶方阵中任意一个元素aij都有aij=aji则该矩阵为对称矩阵。
+
+同样分为行优先以及列优先
+
+![image.png](https://s2.loli.net/2023/05/07/HIesyElFMpPVChJ.png)
+
+### 三角矩阵
+
+下三角矩阵：除了主对角线和下三角区，其余的元素都相同。
+
+![image.png](https://s2.loli.net/2023/05/07/RsEi1olFjNmhyx6.png)
+
+上三角矩阵：除了主对角线和上三角区，其余的元素都相同。
+
+![image.png](https://s2.loli.net/2023/05/07/WXmuoJQ1639Tkpe.png)
+
+### 三对角矩阵
+
+又称带状矩阵，当|i-j|>1时，有aij=0(1<=i,j<=n)
+
+由i,j得到k：
+
+![image.png](https://s2.loli.net/2023/05/07/4OwdIx3zWNYmQkJ.png)
+
+由k得到i,j：
+
+![image.png](https://s2.loli.net/2023/05/07/OY2S7yekpNMvmu6.png)
+
+由k以及i的表达式可以进一步得到j的表达式
+
+### 稀疏矩阵
+
+非零元素远远少于矩阵元素的个数
+
+使用三元组存储：
+
+![image.png](https://s2.loli.net/2023/05/07/P9hurAbmfHNOBLR.png)
+
+使用十字链表法存储：
+
+![image.png](https://s2.loli.net/2023/05/07/IM2r4mQHRAKdxYZ.png)
+
+总结：
+
+![image.png](https://s2.loli.net/2023/05/07/ZkD4LShNHfWYUpn.png)
+
