--- a/串/四、串.md
+++ b/串/四、串.md
@@ -107,6 +107,8 @@ typedef struct StringNode2 {
 
 ### 朴素模式匹配
 
+时间复杂度为O(mn)
+
 ```cpp
 //朴素模式匹配算法
 int Index(SString S, SString T)
@@ -130,7 +132,7 @@ int Index(SString S, SString T)
 
 ### KMP算法
 
-先利用模式串T求出next数组，利用next数组进行匹配，使得主串指针不回溯。
+先利用模式串T求出next数组，利用next数组进行匹配，使得主串指针不回溯。时间复杂度为O(m+n)
 
 ```cpp
 //KMP算法
